--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Exercice 2</title>
   </head>
   <body>
-    <p id="number">Nombre : <input type="text" name="" value="" /></p>
-    <button type="button" name="button" id="clickBetter">+</button>
-    <button type="button" name="button" id="clickLower">-</button>
-
+    <form>
+      <button type="button" name="button" id="clickBetter"> + </button>
+      <button type="button" name="button" id="clickLower"> - </button>
+      <input type="number" id="number" value="0" />
+    </form>
     <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
